# goit-pythonweb-hw-06

./: .gitignore  README.md  config.ini  config.ini.example  pyproject.toml
assets/uml/: ER-Diagram.mdj
migrations/: env.py
migrations/versions/: 4bacf6836b66_init.py  87ecf5e494ae_v2_change_grade_task_to_task_number_int.py  cde09f5d9791_init.py  cde09f5d9791_v1_init.py
src/database/: __init__.py  connection.py  session.py
src/database/models/: __init__.py  associations.py  base.py  base_model.py  grade.py  group.py  mixins.py  person.py  personal_data.py  student.py  subject.py  teacher.py
src/scripts/: seed.py
src/utils/: constants.py  validators.py
