[project]
name = "goit-pythonweb-hw-06"
version = "0.1.0"
description = "Python application covering database modeling with SQLAlchemy, migrations with Alembic, data seeding using Faker, advanced SQL queries using ORM, and a CLI interface for CRUD operations. PostgreSQL is used as the database engine."
authors = [
    {name = "Oleksandr Romashko",email = "alex.rmshk@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy (>=2.0.42,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
